syntax = "proto3";
package com.example.grpc;


message CrashedRequest {
  string ID =1;
  string address =2;
  int32 port =3;
}

message CrashedResponse {
  string response=1;
}

service CrashedService {
  rpc crashed(CrashedRequest) returns (stream CrashedResponse);
}