syntax = "proto3";
package com.example.grpc;


message GoodbyeRequest {
  string ID = 1;
  string address = 2;
  int32 port = 3;
}

message GoodbyeResponse {
  string response = 1;
}

service GoodbyeService {
  rpc goodbye(GoodbyeRequest) returns (stream GoodbyeResponse);
}
