syntax = "proto3";
package com.example.grpc;

message RobotRequest {
  string ID = 1;
  string address = 2;
  int32 port = 3;
  int32 row =4;
  int32 column =5;
  int32 district = 6;
}

message RobotResponse {
  string response = 1;
}

service RobotService {
  rpc hello(RobotRequest) returns (stream RobotResponse);
}
